// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterTransactions > should open dropdown list with all transaction types 1`] = `
<div>
  <div
    data-testid="FilterTransactions"
  >
    <div
      aria-controls=":r4:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <button
        class="inline-flex relative justify-center items-center py-1.5 px-4 space-x-2 w-full text-base font-semibold text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 sm:w-fit dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-dark-navy-700 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="CollapseToggleButton"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                fill="none"
                height="16"
                style="height: 100%; width: 100%;"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_13768_41214)"
                >
                  <path
                    d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.6"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_13768_41214"
                  >
                    <rect
                      fill="white"
                      height="16"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
          </div>
          <span>
            Type
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterTransactions > should render 1`] = `
<div>
  <div
    data-testid="FilterTransactions"
  >
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <button
        class="inline-flex relative justify-center items-center py-1.5 px-4 space-x-2 w-full text-base font-semibold text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 sm:w-fit dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-dark-navy-700 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="CollapseToggleButton"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                fill="none"
                height="16"
                style="height: 100%; width: 100%;"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_13768_41214)"
                >
                  <path
                    d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.6"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_13768_41214"
                  >
                    <rect
                      fill="white"
                      height="16"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
          </div>
          <span>
            Type
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterTransactions > should render with default selected option 1`] = `
<div>
  <div
    data-testid="FilterTransactions"
    defaultselected="[object Object]"
  >
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <button
        class="inline-flex relative justify-center items-center py-1.5 px-4 space-x-2 w-full text-base font-semibold text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 sm:w-fit dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-dark-navy-700 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="CollapseToggleButton"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                fill="none"
                height="16"
                style="height: 100%; width: 100%;"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_13768_41214)"
                >
                  <path
                    d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.6"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_13768_41214"
                  >
                    <rect
                      fill="white"
                      height="16"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
          </div>
          <span>
            Type
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;
